# fastapi-boilerplate

./: .env.example  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
compose/: app-dev.yaml  app.yaml  nginx.yaml  postgres.yaml
src/: config.py  main.py
src/models/: __init__.py
src/repositories/: __init__.py
src/services/: __init__.py
src/usecases/: __init__.py
src/utils/: __init__.py  repository.py
tests/: conftest.py  test_test.py
