[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = ""
authors = [
    {name = "Roman Ivanov",email = "sitdoff@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "fastapi[all] (>=0.115.14,<0.116.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
]

[tool.poetry.group.dev.dependencies]
# Tests
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
testcontainers = {extras = ["postgres"], version = "^4.10.0"}
httpx = "^0.28.1"
psycopg2-binary = "^2.9.10"
# Linters and formatters
black = "^25.1.0"
mypy = "^1.16.1"
pylint = "^3.3.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.pyright]
venvPath = "./"
venv = ".venv"
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false

[tool.mypy]
mypy_path = "./.venv/bin/mypy"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.black]
line-length = 120
skip-strin-normalization = true

[tool.isort]
profile = "black"

